--- a/vignettes/workflow_eisenstadt-2005.Rmd
+++ b/vignettes/workflow_eisenstadt-2005.Rmd
@@ -153,7 +153,8 @@ psi_s_mm <- function(kf_mmh) (3.237 * (kf_mmh/25.4)^(-0.328)) * 25.4
 #Number of cores for parallel processing (or: automatic)
 future::plan(future::multisession, workers = parallel::detectCores())
 
-future.apply::future_lapply(seq_len(nrow(param_grid)), function(i) {
+system.time(
+  future.apply::future_lapply(seq_len(nrow(param_grid)), function(i) {
   
   param_grid_tmp <- param_grid[i, ]
   
@@ -205,6 +206,7 @@ h5$close_all()
   kwb.raindrop::run_model(path_exe = paths$path_exe,
                           path_input = paths$path_target_input)
 })
+)
 
 
 ### Read results for first run
@@ -241,143 +243,31 @@ errors_df <- lapply(simulation_names, function(s_name) {
 ### Analyse Results
 
 ```{r analyse_results, eval = !is_ghactions}
-import_results_from_rds <- FALSE
-debug <- TRUE
 paths <- kwb.utils::resolve(path_list, dir_target = sprintf("s%05d", i = 1))
 
 #simulation_names <- basename(fs::dir_ls(paths$dir_output))
-simulation_names <- scenarios_with_single_parameter_variation
 simulation_names <- param_grid$scenario_name
 
-# future::plan(future::multisession, workers = parallel::detectCores())
-
-simulation_results <- if(import_results_from_rds == FALSE) {
-  
-message(sprintf("Reading results files ('%s') for %d model runs",
-                                               paste0(c(paths$file_results_hdf5_element, paths$file_results_hdf5_flaeche), collapse = "|"),
-                                                      length(simulation_names)))
-  stats::setNames(lapply(simulation_names, function(s_name) {
+system.time(
+simulation_results <- kwb.raindrop::get_simulation_results_optim(paths = paths, 
+                                                                 path_list = path_list,
+                                                                 simulation_names = simulation_names)
+)
 
 
-s_id <- s_name %>% stringr::str_remove("s") %>%  as.integer()
-
-paths <- kwb.utils::resolve(path_list, dir_target = s_name)
-
-if(all(file.exists(c(paths$path_results_hdf5_element, 
-                 paths$path_results_hdf5_flaeche)))) {
-
-    kwb.utils::catAndRun(messageText = sprintf("(%d/%d)) Reading results files for model run %s",
-                                               which(simulation_names == s_name),
-                                               length(simulation_names),
-                                               paths$dir_target_output),
-                         expr = {
-
-# "a" = read/write (legt an, falls nicht da); alternativ "r+" = read/write, aber nicht neu anlegen
-res_hdf5_element <- hdf5r::H5File$new(paths$path_results_hdf5_element, mode = "r")
-res_hdf5_flaeche <- hdf5r::H5File$new(paths$path_results_hdf5_flaeche, mode = "r")
-#res_hdf5_verschaltungen <- hdf5r::H5File$new(paths$path_results_hdf5_verschaltungen, mode = "r")
-
-hdf5_results <- list(
-  element = list(
-    meta = kwb.raindrop::read_hdf5_scalars(res_hdf5_element[["Metainfo"]], numeric_only = FALSE),
-    rates = kwb.raindrop::read_hdf5_timeseries(res_hdf5_element[["Raten"]]),
-    water_balance = kwb.raindrop::read_hdf5_scalars(res_hdf5_element[["Wasserbilanz"]]),
-    #additional_evapotranspiration = kwb.raindrop::read_hdf5_timeseries(res_hdf5_element[["Zusaetzliche Variablen Evapotranspiration"]]),
-    #additional_infiltration = kwb.raindrop::read_hdf5_timeseries(res_hdf5_element[["Zusaetzliche Variablen Infiltration"]]),
-    states = kwb.raindrop::read_hdf5_timeseries(res_hdf5_element[["Zustandsvariablen"]])),
-  connected_area = list(
-    meta = kwb.raindrop::read_hdf5_scalars(res_hdf5_flaeche[["Metainfo"]], numeric_only = FALSE),
-    rates = kwb.raindrop::read_hdf5_timeseries(res_hdf5_flaeche[["Raten"]]),
-    water_balance = kwb.raindrop::read_hdf5_scalars(res_hdf5_flaeche[["Wasserbilanz"]]),
-    #additional_evapotranspiration = kwb.raindrop::read_hdf5_timeseries(res_hdf5_flaeche[["Zusaetzliche Variablen Evapotranspiration"]]),
-    #additional_infiltration = kwb.raindrop::read_hdf5_timeseries(res_hdf5_flaeche[["Zusaetzliche Variablen Infiltration"]]),
-    states = kwb.raindrop::read_hdf5_timeseries(res_hdf5_flaeche[["Zustandsvariablen"]]))#,
-  #connections =  kwb.raindrop::read_hdf5_connections(res_hdf5_verschaltungen)
+system.time(
+simulation_results_optimisation <- kwb.raindrop::add_overflow_events_and_waterbalance(
+  simulation_results = simulation_results,
+  event_separation_hours = 4
   )
-
-hdf5_results
-}, 
-dbg = debug)}}), nm = simulation_names)
-} else {
-  readRDS(file = "../simulation_results.Rds")
-}
-
-
-simulation_results_optimisation <- stats::setNames(lapply(names(simulation_results), function(s_name) {
-
-# --- element: Prozent korrekt auf (Regen + Zufluss aus Verschaltungen) ----
-wb_el_raw <- simulation_results[[s_name]]$element$water_balance
-
-# denom = Regen + |Verschaltungen| (beide skalar aus der WB ziehen)
-denom_element <- wb_el_raw %>%
-  tidyr::pivot_wider(names_from = variable, values_from = value) %>%
-  dplyr::transmute(denom = WB_Regen + abs(WB_Oberflaechenablauf_Verschaltungen)) %>%
-  dplyr::pull(denom)
-
-wb_element <- wb_el_raw %>%
-  dplyr::mutate(
-    variable = sprintf("element.%s_", variable),
-    value_percent = round(100 * value / denom_element, 2)   # <-- SIGN behalten!
-  ) %>%
-  dplyr::select(-value) %>%
-  tidyr::pivot_wider(names_from = "variable", values_from = "value_percent")
-
-# --- connected_area: Prozent korrekt (Basis = Regen; keine Rückkopplung) ----
-wb_ca_raw <- simulation_results[[s_name]]$connected_area$water_balance
-
-denom_connectedarea <- wb_ca_raw %>%
-  tidyr::pivot_wider(names_from = variable, values_from = value) %>%
-  dplyr::transmute(
-    denom = dplyr::if_else(
-      !is.na(WB_Regen) & WB_Regen != 0,
-      WB_Regen,
-      abs(WB_Oberflaechenablauf_Verschaltungen)  # Fallback
-    )
-  ) %>%
-  dplyr::pull(denom)
-
-wb_connectedarea <- wb_ca_raw %>%
-  dplyr::mutate(
-    variable = sprintf("connectedarea.%s_", variable),
-    value_percent = round(100 * value / denom_connectedarea, 2)  # SIGN behalten
-  ) %>%
-  dplyr::select(-value) %>%
-  tidyr::pivot_wider(names_from = "variable", values_from = "value_percent")
-  
-xx <- simulation_results[[s_name]]$element$rates %>% 
-  dplyr::filter(variable == "Oberflaechenablauf_Ueberlauf", 
-                value > 0) %>% 
-  dplyr::mutate(datetime = lubridate::as_datetime(time*3600)) %>% 
-  dplyr::relocate(datetime, .before = time)
-
-
-if(nrow(xx) > 0) {
-xx_events <-  kwb.event::hsEvents(tseries = xx$datetime,
-                                  evtSepTime = 3600 * 4,
-                                  signalWidth = 0.1*3600,
-                                  tUnit = "h")
-
-
-xx_events$overflow_sum <- sapply(seq_len(nrow(xx_events)), function(event)  {
-        sum(xx[xx_events$iBeg[event]:xx_events$iEnd[event], "value"])
-
-})
-} 
-
-tibble::tibble(s_name = s_name,
-               n_overflows = ifelse(nrow(xx) > 0, nrow(xx_events), 0),
-               median_duration_overflows_hours = ifelse(nrow(xx) > 0, round(median(xx_events$dur), 2), NA),
-               sum_overflows = ifelse(nrow(xx) > 0, round(sum(xx_events$overflow_sum),2), 0)) %>% 
-  dplyr::bind_cols(wb_element) %>% 
-  dplyr::bind_cols(wb_connectedarea)
-}), names(simulation_results)) %>% dplyr::bind_rows()
-
+)
 
 simulation_results_optimisation <- param_grid %>% 
   dplyr::left_join(simulation_results_optimisation,
                    by = c("scenario_name" = "s_name")) %>% 
   dplyr::relocate(scenario_name, .before = connected_area)
 
+readr::write_csv(simulation_results_optimisation, file = "simulation_results_optimisation.csv")
 
 htmlwidgets::saveWidget(DT::datatable(simulation_results_optimisation,
                                       filter = "top",
@@ -452,6 +342,27 @@ for (y in c("mulde_height", "filter_hydraulicconductivity", "storage_height")) {
 
 kwb.utils::finishAndShowPdf(pdff)
 
+pdff <- "simulation_results_optimisation_water-balance.pdf"
+kwb.utils::preparePdf(pdfFile = pdff)
 
+p <- kwb.raindrop::plot_wb_tradeoff_overflows(
+  simulation_results_optimisation = simulation_results_optimisation,
+  param_grid = param_grid,
+  filter_n_gt1 = TRUE,
+  use_jitter = TRUE
+  )
+
+  # interaktiv als HTML
+  plotly_p <- suppressWarnings(plotly::ggplotly(p, tooltip = "text"))
+  htmlwidgets::saveWidget(
+    widget = plotly_p,
+    file = "simulation_results_optimisation_water-balance.html",
+    selfcontained = TRUE,
+    title = "Water balance vs overflows"
+  )
+
+  # statisch ins PDF (WICHTIG!)
+  suppressWarnings(print(p))  
+kwb.utils::finishAndShowPdf(pdff)
 
 ```
