do not run model on GH actions

--- a/vignettes/workflow_120min_40mm.Rmd
+++ b/vignettes/workflow_120min_40mm.Rmd
@@ -139,7 +139,7 @@ psi_s_mm <- function(kf_mmh) (3.237 * (kf_mmh/25.4)^(-0.328)) * 25.4
 
 ### Run Model
 
-```{r run_model, eval = TRUE}
+```{r run_model, eval = !is_ghactions}
 # Number of cores for parallel processing (or: automatic)
 #future::plan(future::multisession, workers = parallel::detectCores() - 1)
 
