--- a/vignettes/workflow_v2.Rmd
+++ b/vignettes/workflow_v2.Rmd
@@ -12,7 +12,10 @@ knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>"
 )
-is_ghactions <- identical(Sys.getenv("CI"), "true")
+is_ghactions <- tolower(Sys.getenv("GITHUB_ACTIONS")) == "true"
+is_ci <- tolower(Sys.getenv("CI")) %in% c("true", "1", "yes")
+
+is_ghactions <- is_ghactions || is_ci
 
 ```
 
