--- a/vignettes/workflow_v2.Rmd
+++ b/vignettes/workflow_v2.Rmd
@@ -12,10 +12,11 @@ knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>"
 )
-is_ghactions <- tolower(Sys.getenv("GITHUB_ACTIONS")) == "true"
-is_ci <- tolower(Sys.getenv("CI")) %in% c("true", "1", "yes")
-
-is_ghactions <- is_ghactions || is_ci
+# is_ghactions <- tolower(Sys.getenv("GITHUB_ACTIONS")) == "true"
+# is_ci <- tolower(Sys.getenv("CI")) %in% c("true", "1", "yes")
+# 
+# is_ghactions <- is_ghactions || is_ci
+is_ghactions <- TRUE
 
 ```
 
@@ -137,7 +138,7 @@ htmlwidgets::saveWidget(DT::datatable(param_grid), "param_grid.html")
 
 ### Run Model
 
-```{r run_model, eval = TRUE}
+```{r run_model, eval = !is_ghactions}
 # Number of cores for parallel processing (or: automatic)
 #future::plan(future::multisession, workers = parallel::detectCores() - 1)
 
